--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "test": "echo \"No tests implemented yet\""
+    "test": "vitest run"
   },
   "license": "MIT",
   "peerDependencies": {
-    "next": "^14.0.0 || ^15.0.0"
+    "next": ">=15.0.5 <16 || >=16.0.7 <17"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2",
+    "next": "16.0.7",
+    "typescript": "^5.6.3",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@darkhorseone/x402-core": "^0.1.0"
